--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,7 +1,10 @@
  /* left hand side */
-.left {
-  height: 690px;
-  background-color: gainsboro;
-}
+ .left {
+   height: 690px;
+   background-color: gainsboro;
+ }
 
- 
+ .transfer {
+   overflow-y: auto;
+   max-height: 100px;
+ }
