--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -6,5 +6,14 @@
 
  .transfer {
    overflow-y: auto;
-   max-height: 100px;
+   max-height: 90px;
+ }
+
+ .page {
+   text-decoration: none;
+   color: black;
+ }
+
+ .sim{
+  max-height: 50px;
  }
