--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -14,6 +14,11 @@
    color: black;
  }
 
- .sim{
-  max-height: 50px;
+ .sim {
+   max-height: 50px;
+ }
+
+ .note {
+   text-decoration: underline blue;
+   color: blue;
  }
