--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -2,11 +2,92 @@
  .left {
    height: 690px;
    background-color: gainsboro;
+   max-width: 25vh;
+   display: flex;
+   flex-direction: column;
+   text-align: center;
+   border-radius: 5px;
+   font-size: x-large;
  }
 
+ .left img {
+   border-radius: 70px;
+   max-width: 18vh;
+   padding: 5%;
+ }
+
+ .icon {
+   padding-top: 25%;
+   padding-bottom: 25%;
+ }
+
+ /* face of the pages */
+ .face {
+   display: flex;
+   justify-content: space-between;
+ }
+
+ /* title of all pages */
+ .title {
+   padding: 3%;
+   font-size: xx-large;
+   border: solid 1px gainsboro;
+   border-radius: 5px;
+   max-width: 100%;
+   display: flex;
+   justify-content: space-between;
+ }
+
+ /* body of all pages */
+ .body {
+   width: 200vh;
+   margin: 1%;
+ }
+
+ /* card */
+ .card-container {
+   border-radius: 5px;
+   border: solid 1px gainsboro;
+ }
+
+ .card {
+   height: 50vh;
+   background-color: black;
+   margin: 3%;
+   color: white;
+   font-size: x-large;
+   padding: 3%;
+ }
+
+ .cvv {
+   position: absolute;
+   right: 3%;
+   top: 40%;
+ }
+
+ .fullname {
+   position: absolute;
+   bottom: 3%;
+ }
+
+ /* under the home */
  .transfer {
-   overflow-y: auto;
-   max-height: 90px;
+   display: flex;
+   justify-content: space-around;
+   text-align: center;
+ }
+
+ .bottom {
+   background-color: gainsboro;
+   border-radius: 5px;
+   padding: 5px;
+ }
+
+ .footer{
+  text-align: center;
+  position: absolute;
+  bottom: 0%;
+  left: 50%;
  }
 
  .page {
@@ -21,4 +102,113 @@
  .note {
    text-decoration: underline blue;
    color: blue;
+ }
+
+ /* login form page */
+ .login-page {
+   display: flex;
+   justify-content: center;
+   justify-content: space-between;
+   align-items: center;
+   max-height: 100vh;
+ }
+
+ .login-page img {
+   max-width: 100vh;
+ }
+
+ /* login form */
+ .login {
+   display: flex;
+   flex-direction: column;
+   width: 30%;
+   padding: 2%;
+   margin: 2%;
+   border: solid 1px;
+   border-radius: 5px;
+   box-shadow: 4px 6px 2px;
+   max-height: max-content;
+ }
+
+ .login input {
+   border-radius: 5px;
+   margin: 2%;
+   padding: 2%;
+ }
+
+ .login button {
+   background-color: black;
+   color: white;
+   border: none;
+   border-radius: 5px;
+   margin: 2%;
+   padding: 2%;
+ }
+
+ .login button:hover {
+   background-color: darkslategrey;
+ }
+
+ .login h4 {
+   text-align: center;
+   padding-bottom: 2%;
+ }
+
+ .forget {
+   display: flex;
+   justify-content: space-around;
+   padding: 2%;
+ }
+
+ /*signup page*/
+ .signup-page {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   max-height: 100vh;
+ }
+
+ .signup-page img {
+   max-width: 100vh;
+ }
+
+ .signup {
+   padding: 2%;
+   margin: 2%;
+   border: solid 1px;
+   box-shadow: 4px 6px 2px;
+   border-radius: 5px;
+   max-width: max-content;
+ }
+
+ .signup input {
+   padding: 2%;
+   margin: 2%;
+   border-radius: 5px;
+   width: 50vh;
+ }
+
+ .signup button {
+   background-color: black;
+   color: white;
+   border: none;
+   border-radius: 5px;
+   margin: 2%;
+   padding: 2%;
+   width: 50vh;
+ }
+
+ .signup button:hover {
+   background-color: darkslategrey;
+ }
+
+ .signup h4 {
+   text-align: center;
+   padding-bottom: 2%;
+   text-transform: capitalize;
+ }
+
+ .already {
+   text-align: center;
+   padding: 2%;
  }
