--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -83,11 +83,11 @@
    padding: 5px;
  }
 
- .footer{
-  text-align: center;
-  position: absolute;
-  bottom: 0%;
-  left: 50%;
+ .footer {
+   text-align: center;
+   position: absolute;
+   bottom: 0%;
+   left: 50%;
  }
 
  .page {
@@ -97,6 +97,13 @@
 
  .sim {
    max-height: 50px;
+ }
+
+ /* notification */
+ .notes {
+   display: flex;
+   justify-content: space-around;
+   font-size: x-large;
  }
 
  .note {
