--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -323,6 +323,10 @@
    justify-content: space-between;
  }
 
+ .table-body:hover {
+  background-color: gainsboro;
+}
+
  .tbody-container {
    max-height: 15vh;
    overflow-y: scroll;
