--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -551,6 +551,16 @@ body {
   border-radius: 100px;
 }
 
+.accNum {
+  font-size: large;
+  border: solid 1px gainsboro;
+  border-radius: 20px;
+  width: 50%;
+  padding: 1%;
+  height: max-content;
+  margin-top: 1%;
+}
+
 /* welcome */
 .welcome {
   display: flex;
