--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -4,9 +4,9 @@ body {
 
 /* left hand side */
 .left {
-  height: 690px;
+  height: 100vh;
   background-color: rgb(1, 44, 1);
-  width: 25vh;
+  width: 15%;
   display: flex;
   flex-direction: column;
   text-align: left;
@@ -65,7 +65,7 @@ body {
 
 /* body of all pages */
 .body {
-  width: 100%;
+  width: 85%;
   margin: 0.5%;
   margin-top: 0%;
 }
@@ -493,7 +493,7 @@ body {
 /* info chart table container*/
 
 .ict {
-  width: 100vh;
+  width: 57%;
 }
 
 /* dashboard bar */
@@ -600,6 +600,11 @@ body {
 .schedule-transfer p {
   font-size: large;
   font-weight: bold;
+}
+
+.individual-container {
+  height: 25vh;
+  overflow-y: auto;
 }
 
 .individual {
@@ -836,14 +841,49 @@ body {
   }
 }
 
-/* mobile - 768px and below */
-@media (max-width: 768px) {}
+/* tablet - 768px and below */
+@media (max-width: 768px) {
+  .login {
+    width: 40%;
+  }
+
+  .signup {
+    position: absolute;
+    top: 10%;
+    left: 20%;
+  }
+}
 
 /* mobile - 600px and below */
 @media (max-width: 600px) {}
 
 /* Phones - 480px and below */
-@media (max-width: 480px) {}
+@media (max-width: 480px) {
+  .login {
+    width: 60%;
+    position: absolute;
+    top: 10%;
+    left: 20%;
+  }
+
+  .signup {
+    position: absolute;
+    top: 10%;
+    left: 5%;
+  }
+}
 
 /* Small phones - 320px and below */
-@media (max-width: 320px) {}
+@media (max-width: 320px) {
+  .signup {
+    position: absolute;
+    top: 10%;
+    left: 2%;
+  }
+
+  .login {
+    width: 70%;
+    position: absolute;
+    left: 15%;
+  }
+}
