--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -859,6 +859,10 @@ body {
   .close-btn button{
     top: 19%;
   }
+
+  .transfer-close-btn button{
+    top: 20%;
+  }
 }
 
 /* tablet - 768px and below */
@@ -914,7 +918,11 @@ body {
   }
 
   .close-btn button{
-    top: 25%;
+    display: none;
+  }
+
+  .transfer-close-btn button{
+    display: none;
   }
 }
 
@@ -1048,13 +1056,8 @@ body {
   }
 
   .modal-container{
-    width: 60%;
+    width: 70%;
   }
-
-  .close-btn button{
-    top: 26%;
-  }
-
 }
 
 /* Small phones - 320px and below */
@@ -1134,9 +1137,4 @@ body {
   .modal-container{
     width: 80%;
   }
-
-  .close-btn button{
-    top: 30%;
-  }
-
 }
