--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -59,6 +59,7 @@ body {
 
 /* body of all pages */
 .body {
+  overflow: hidden;
   width: 85%;
   margin: 0.5%;
   margin-top: 0%;
@@ -420,7 +421,7 @@ body {
 
 .info-amount {
   margin: 0%;
-  font-size: medium;
+  font-size: 0.93rem;
   font-weight: bold;
   padding: 5%;
 }
@@ -569,7 +570,8 @@ body {
 
 .welcome-button {
   display: flex;
-  flex-direction: row;
+  justify-content: space-between;
+  width: 18%;
 }
 
 /* schedule */
